--- a/style/styles.css
+++ b/style/styles.css
@@ -10,6 +10,8 @@ a:link,a:visited{
 	text-decoration: none;
     color: rgb(64,64,64); 
 }
+
+
 .parentBox:before, .parentBox:after {
     content: " ";
     display: table;
@@ -77,10 +79,25 @@ a:link,a:visited{
     margin: 2px;
     color: lightgray;
 }
-
-.btnTwitter:hover{
-	color: lightblue;
+.faTwit:hover{
+    background-color: lightblue;
+    border-radius: 24px;
 }
+
+.faGit:hover{
+    background-color: black;
+    border-radius: 24px;
+}
+
+.faRss:hover{
+    background-color: orange;
+    border-radius: 24px;
+}
+
+/* .btnTwitter:link, .btnTwitter:visited{
+	color: lightgray;
+} */
+
 
 .articles{
     border-top: 1px solid rgb(244, 242, 240);
@@ -121,4 +138,14 @@ a:link,a:visited{
     font-family: 'Droid Sans', sans-serif; 
 }
 
+a:hover, a:active{
+	color: rgb(26, 255, 140);
+}
+.headerLinks:hover{
+	color: rgb(26, 255, 140);
+}
 
+/* .btnTwitter:hover{
+    border-radius: 24px;
+	background-color: lightblue;
+} */
