--- a/style/styles.css
+++ b/style/styles.css
@@ -23,6 +23,9 @@ body {
     width: 100%;
 }
 
+.hideShowPC{
+    display: none;
+}
 
 a:link,a:visited{
 	text-decoration: none;
@@ -44,8 +47,8 @@ a:link,a:visited{
     background-color: rgb(64, 64, 64);
     font-family: 'Roboto', sans-serif;
     font-size: .65em;
-    display: flex;
-    justify-content:  space-between;
+    /* display: flex; */
+    /* justify-content: space-between; */
 }
 #headerName {
     color: rgb(220, 220, 220);
@@ -59,6 +62,14 @@ a:link,a:visited{
     font-size: 1.2em;
     /* float: left; */
     /* margin-top: 1px; */
+}
+
+.infoJT{
+    float: left;
+}
+
+#dropDown{
+    float: right;
 }
 
 .linkHeader {
@@ -81,15 +92,17 @@ a:link,a:visited{
     /* position: absolute; */
     /* left: 0; */
     float: left ;
-    margin: 3px;
 }
 
 .navLinks {
     /* position: absolute; */
     /* right: 0; */
     /* top: 20px; */
-    margin-top: 10px;
+    /* margin-top: 10px; */
     float: right;
+    position: relative;
+    top: 10px;
+    /* position-top: 1opx; */
 }
 
 
@@ -100,7 +113,7 @@ a:link,a:visited{
     font-size: .9em;
     text-decoration: none;
     margin: 4px;
-    padding:2px;
+    padding: 2px;
     /* postion: absolute; */
 }
 .fa{
@@ -182,8 +195,25 @@ a:hover, a:active{
  	display: block;
 }
 
+@media (min-width: 570px) {
 
-/* .btnTwitter:hover{
-    border-radius: 24px;
-	background-color: lightblue;
-} */
+    #dropDown{
+        display: none;
+    }
+    
+    .hideShowPC{
+        display: block;
+        float: right;
+        width: 60%; 
+       
+    }
+    
+    .innerBody{
+        display: flex;
+        flex-direction: column ;
+        align-items: center;
+		align-content: center;
+        
+     
+    }
+}
