about page and tutorial added

--- a/style/styles.css
+++ b/style/styles.css
@@ -79,7 +79,7 @@ a:link,a:visited{
     /* padding-left: 5px; */
     /* padding-right: 5px; */
     background-color: rgb(244, 242, 240);
-    border-bottom: 2px solid rgb(224, 224, 224);
+/*     border-bottom: 2px solid rgb(224, 224, 224); */
     /* position: relative; */
     height: 40px;
     /* float: left; */
@@ -154,6 +154,7 @@ a:link,a:visited{
     margin-left: 1.2em;
     margin-right: 1.2em;
     margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .articlesHeader{
@@ -179,9 +180,13 @@ a:link,a:visited{
     font-weight: 700;
 }
 
-.articleContent {
+.articleMainContent {
     color: rgb(184,184,184);
     font-family: 'Droid Sans', sans-serif; 
+}
+.articleContent {
+    color: black;
+    font-family: 'Droid Sans', sans-serif;
 }
 
 a:hover, a:active{
@@ -207,9 +212,9 @@ a:hover, a:active{
     .hideShowPC{
         display: block;
         float: right;
-        width: 60%; 
-        background-color: rgb(244, 242, 240); 
-    }
+        width: 60%;
+        background-color: rgb(63, 63, 62);
+}
     
     .innerBody{
         display: flex;
@@ -218,5 +223,8 @@ a:hover, a:active{
 		align-content: center;
         
      
+    }
+    .headerLinks:link{
+        background-color: white;
     }
 }
