--- a/style/styles.css
+++ b/style/styles.css
@@ -214,7 +214,7 @@ a:hover, a:active{
         float: right;
         width: 60%;
         background-color: rgb(63, 63, 62);
-}
+    }
     
     .innerBody{
         display: flex;
@@ -228,3 +228,33 @@ a:hover, a:active{
         background-color: white;
     }
 }
+
+.flexTut1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid black;
+}
+.flexItem{
+    margin: 20px;
+    border: solid blue;
+    padding: 20px;
+    background: lightpink;
+}
+
+.flexTut2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid black;
+}
+
+.flexTut3{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: solid black;
+}
+
+
